# onebot-llm-chat-plugin

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  bot.py  debug_import.py  mkdocs.yml  nonebot-plugin.toml  pyproject.toml  reproduce_issue.py  requirements.txt  start.bat  start.ps1  start.sh  verify_loader.py  verify_prompt.py  verify_simple.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: docs.yml  release.yml  tests.yml
deploy/wsl2/: install-systemd.sh
docs/: git-sop.md  improvement_plan.md  index.md  refactor_direction.md  refactor_plan.md  release-process.md  roadmap.md
docs/api/: config.md  context_store.md  gemini_api.md  handlers.md  mika_api.md  search_engine.md
docs/deploy/: acceptance-matrix.md  changelog-local.md  onebot.md  repo-sync.md  wsl2.md
docs/en/: index.md  roadmap.md
docs/guide/: configuration.md  quickstart.md  troubleshooting.md  upgrade.md  webui.md
docs/releases/: v0.1.0.md
examples/node-core-service-demo/: README.md  index.mjs
examples/tool_plugin_example/: README.md  __init__.py  plugin.py
scripts/: bootstrap.py  build_docs.sh  build_webui.sh  config_wizard.py  doctor.py  gen_config_docs.py  init_new_table.py  init_new_table_direct.py
src/mika_chat_cli/: __init__.py  cli_config.py  cli_ports.py
src/mika_chat_core/: __init__.py  agent_hooks.py  config.py  contracts.py  core_service.py  core_service_client.py  deps.py  engine.py  error_policy.py  errors.py  event_envelope.py  gemini_api.py  gemini_api_messages.py  gemini_api_proactive.py  gemini_api_tools.py  gemini_api_transport.py  group_state.py  handlers.py  handlers_flow.py  (+19 more)
tests/: __init__.py  conftest.py  test_active_reply_ltm.py  test_agent_hooks.py  test_breaking_changes_contract.py  test_builder_caption_fallback.py  test_builder_group_uses_transcript.py  test_builder_inline_history_images.py  test_builder_tools_support_override.py  test_chat_history_summarizer.py  test_cli_adapter.py  test_config.py  test_config_effective_snapshot.py  test_config_profile_presets.py  test_context_degradation.py  test_context_manager.py  test_context_payload.py  test_context_record_reply_mention.py  test_context_store.py  test_context_store_sessions.py  test_context_store_textify_images.py  test_contracts.py  test_core_import_without_host_runtime.py  test_core_no_nonebot_imports.py  test_core_service.py  test_core_service_client.py  test_db_maintenance_prune.py  test_dream_agent.py  test_engine_host_event_port.py  test_env_example_contract.py  test_env_path_aliases.py  test_event_context.py  test_event_envelope.py  test_fake_ports.py  test_fetch_history_images_tool.py  test_file_structure.py  test_gemini_api.py  test_group_state.py  test_group_transcript_builder.py  test_handlers.py  (+75 more)
webui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+290 files in other folders)
