[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nonebot-gemini-bot"
version = "0.1.0"
description = "NoneBot2 QQ 机器人项目，集成 Gemini API 和 Serper API 搜索"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Bot Developer" }
]
keywords = ["nonebot", "qq", "bot", "gemini", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]

dependencies = [
    # NoneBot2 核心框架
    "nonebot2>=2.4.4",
    "nonebot-adapter-onebot>=2.4.6",
    
    # Web 服务器
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    
    # HTTP 客户端
    "httpx>=0.28.1",
    
    # Google Gemini API
    "google-genai>=1.58.0",
    
    # 数据库
    "aiosqlite>=0.22.1",
    
    # 配置和验证
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    
    # 日志
    "loguru>=0.7.3",
    
    # YAML 解析（提示词加载）
    "PyYAML>=6.0",
    
    # 图片处理（拼图功能）
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]
semantic = [
    # Optional: lower-memory semantic matcher backend (recommended for long-running WSL2)
    "fastembed",
]

[project.urls]
Homepage = "https://github.com/yourusername/nonebot-gemini-bot"
Repository = "https://github.com/yourusername/nonebot-gemini-bot.git"
Issues = "https://github.com/yourusername/nonebot-gemini-bot/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
